# bangumireader

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
bugreport/: CMakeLists.txt  bugreport.cpp  bugreport.h  bugreport.ui  main.cpp
src/: CMakeLists.txt  main.cpp  mikanbangumireader.cpp  mikanbangumireader.h  mikanbangumireader.ui  resource.h  resource.qrc  resource.rc.in  ui.qrc
src/databasemodels/: bangumidatamodel.cpp  bangumidatamodel.h  remarktbmodel.cpp  remarktbmodel.h  savepathcachemodel.cpp  savepathcachemodel.h  settingtbmodel.cpp  settingtbmodel.h  subscribemodel.cpp  subscribemodel.h
src/entity/: BangumiDatabase.h  RemarkTb.h  SavePathCache.h  SettingTb.h  SqliteEntityInclude.cpp  SubscribeGroupItem.h  SubscribeGroups.h  SubscribeTb.h  entity.cmake  entity.pri  sqlite_entity.xml  sqliteconfig.h
src/models/: bangumidatabaselistmodel.cpp  bangumidatabaselistmodel.h  bangumidetailmodel.cpp  bangumidetailmodel.h  bangumilistmodel.cpp  bangumilistmodel.h  rsssubscribemodel.cpp  rsssubscribemodel.h  sourcelinkmodel.cpp  sourcelinkmodel.h
src/pages/: bangumilistitem.ui  bangumilistpage.cpp  bangumilistpage.h  bangumilistpage.ui
src/ui/: main.qml  rssnotify.qml
src/ui/components/: AppHeader.qml  BangumiListView.qml
src/ui/dialog/: PromptDialog.qml  SettingDialog.qml  SubscribeDialog.qml
src/ui/subpages/: BangumiDatabasePage.qml  BangumiDetailPage.qml  BangumiListPage.qml  RssSubscribePage.qml  SourceLinkPage.qml
src/ui/widgets/: AnchorHLine.qml  ColorCheckBox.qml  GradientBg.qml  IconBtn.qml  IconBtn2.qml  KeywordNotice.qml  RoundButton.qml  RoundComboBox.qml
src/utils/: bangumidatabasereader.cpp  bangumidatabasereader.h  mikanrssreader.cpp  mikanrssreader.h  myquickview.cpp  myquickview.h  rssnotifyview.cpp  rssnotifyview.h  textutil.h  versionchecker.cpp  versionchecker.h
test/: CMakeLists.txt  main.cpp
